js/js.translator/testData/incremental/invalidation/unstableIrReproducer/lib1/f2.kt
fun f2(x: Int): Int {
    when (x) {
        1 -> return 0
        else -> return 10
    }
    return 100
}
